# wasmcloud-operator

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.wolfi  LICENSE  MAINTAINERS.md  Makefile  README.md  sample.yaml
.github/: CODEOWNERS  dependency-review-config.yml
.github/workflows/: build.yml  chart.yaml  dependency-review.yml
charts/wadm-operator/: Chart.yaml  values.yaml
charts/wadm-operator/templates/: _helpers.tpl  cluster-role.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/wadm-operator/templates/tests/: test-connection.yaml
charts/wasmcloud-operator/: Chart.yaml  values.yaml
charts/wasmcloud-operator/templates/: _helpers.tpl  cluster-role.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/wasmcloud-operator/templates/tests/: test-connection.yaml
crates/types/: Cargo.toml
crates/types/src/v1alpha1/: mod.rs  wasmcloud_host_config.rs
deploy/base/: deployment.yaml  kustomization.yaml  namespace.yaml
deploy/local/: kustomization.yaml  local-registry.yaml
examples/full-config/: wasmcloud-annotated.yaml
examples/quickstart/: README.md  default-lattice.yaml  hello-world-application.yaml  nats-values.yaml  wadm-values.yaml  wasmcloud-host.yaml
hack/: nats-values.yaml  run-kind-cluster.sh  teardown-kind-cluster.sh  wasmcloud-hostconfig-sample.yaml
src/: config.rs  controller.rs  crdgen.rs  discovery.rs  docker_secret.rs  header.rs  lib.rs  main.rs  openapi.rs  router.rs  services.rs  table.rs
src/resources/: application.rs
